--- a/adder/Cargo.toml
+++ b/adder/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "subscriber"
-version = "0.1.0"
-authors = ["Wxp97"]
+authors = ["Wesley Parr <rustchain64@gmail.com>"]
 edition = "2018"
+name = "adder"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+add-one = {path = "../add-one"}
+nng = ""
+rand = "0.8.3"
