--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 exclude = ["crates/foo", "path/to/other"]
-members = ["./event_hub", "./add-one"]
+members = ["./event_hub", "./db_connect"]
