--- a/db_connect/Cargo.toml
+++ b/db_connect/Cargo.toml
@@ -5,7 +5,7 @@ name = "db_connect"
 version = "0.1.0"
 
 [dependencies]
-async-std = {version = "1.6", features = ["attributes"]}
 nng = ""
 rand = "0.8.3"
-sqlx = {version = "0.5", features = ["runtime-async-std-native-tls", "postgres"]}
+sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
+tokio = {version = "1", features = ["full"]}
